# schnellru

./: CHANGELOG.md  Cargo.toml  README.md  ci.sh  rustfmt.toml
.github/workflows/: rust.yml
benches/: benches.rs
ci/: run-all-tests.sh
ci/jobs/: build-and-test.sh  clippy.sh  fuzz.sh  rustfmt.sh
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/src/: fuzz-behavior-matches-lru.rs  fuzz-by-memory-usage-works.rs  fuzz-internal-invariants.rs
src/: lib.rs  limiters.rs
