[package]
name = "schnellru"
version = "0.2.3"
authors = ["Jan Bujak <j@exia.io>"]
repository = "https://github.com/koute/schnellru"
homepage = "https://github.com/koute/schnellru"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "A fast and flexible LRU map"
edition = "2021"
rust-version = "1.71.1"

[features]
default = ["runtime-rng"]

# When enabled uses the `getrandom` crate to seed the maps' hasher by default.
runtime-rng = ["ahash/runtime-rng"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# We depend on some of `hashbrown`'s internal details for some of our functionality.
# While it is unlikely those internal details suddenly change in a minor version update
# it's safer to just explicitly pin the exact minor version we need.
hashbrown = { version = "= 0.13.2", features = ["raw", "inline-more"], default-features = false }

ahash = { version = "0.8.2", default-features = false }
cfg-if = "1.0.0"

[dev-dependencies]
criterion = "0.4.0"
lru = "0.8.1"
indexmap = "1.9.2"
oorandom = "11.1.3"

[[bench]]
name = "benches"
harness = false

[workspace]
members = [".", "fuzz"]
